--- a/public/styles.css
+++ b/public/styles.css
@@ -2,4 +2,39 @@ body {
 	background-color: #0f172a;
 	color: white;
 	display: flex;
+	flex-direction: column;
+	align-items: center;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+a {
+	text-decoration: none;
+	color: black;
+}
+button {
+	display: block;
+	padding: 10px 15px;
+	border-radius: 10px;
+	border: none;
+	font-size: 15px;
+	letter-spacing: 1px;
+	margin-inline: auto;
+}
+.message-list {
+	margin-top: 1rem;
+	padding: 1rem;
+	border: 2px solid #cbd5e1;
+	border-radius: 8px;
+}
+ul {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+input,
+textarea {
+	width: 300px;
+	padding: 10px;
+	padding: 10px;
+	margin: 1rem;
 }
